# mandelbrot-c

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
.github/workflows/: cmake.yml
src/: .main.c.swp  cli.c  cli.h  color_map.c  color_map.h  generator.c  generator.h  main.c  mandelbrot.c  mandelbrot_iteration_checker.c  mandelbrot_iteration_checker.h  png_writer.c  png_writer.h
